Improve Image Accessibility and Update README
- Added alt text to the qr code image
- Updated the README.md file accordingly

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <body>
   <main>
-    <img src="./images/image-qr-code.png">
+    <img src="./images/image-qr-code.png" alt="A QR Code on a blue background with halfcircles">
     <h1>Improve your front-end skills by building projects</h1>
     <h2>Scan the QR Code to visit Frontend Mentor and take your coding skills to the next level</h2>
     <footer class="attribution">
       <h3>Challenge by: <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> </h3>
-      <h3>Coded by: <a href="#" target="_blank">Desi</a></h3>
+      <h3>Coded by: <a href="https://github.com/desilvavelasquez123" target="_blank">Desi</a></h3>
     </footer>
   </main>
 </body>
